
2010-05-06
	* src/libgpukernel/opencl-obj.c: support for new OpenCL Binary Image Format (BIF)
		in AMD APP SDK 2.4
	* src/libgpukernel/gpumachine.c: bug fixed in 'FETCH' instruction. Call to
		'gpu_thread_get_pred' replaced by 'gpu_thread_get_active'.

2010-05-07
	* src/libgpukernel/gpuisa.c: bug fixed in function 'gpu_isa_read_op_src' when trying
		to get absolute value and negation for floating point numbers. This bug fix
		provides support for additional OpenCL kernels.

2010-05-08
	* Version 3.0.3 Released

2010-05-10
	* Function 'amd_inst_FETCH_impl()' extended, providing support for more data formats.
	* Functions 'amd_inst_SET???_impl()' and 'amd_inst_SET???_DX10_impl()'
	* Functions 'amd_inst_CND???_impl()'
	* Evergreen Instructions COS/SIN/FRACT

2010-05-11
	* src/libcpuarch: Library 'libcpuarch' created, including all files used in the main
		'src' directory, except those generating executables.
	* all: Replace email address to 'ubal@gap.upv.es'.
	* src/libcpukernel: Library 'libm2skernel' renamed.
	* src/libcpudisasm: Library 'libdisasm' renamed.

2010-05-13
	* src/libgpuarch: Makefile.in added
	* src/libgpukernel/gpuisa.c: support for different warps.

2010-05-16
	* src/libgpukernel: warp -> wavefront, thread -> work_item
	* src/libgpukernel/gpuisa.c: current decoded instruction added as a field of struct
		gpu_wavefront_t.

2010-05-17
	* src/libmisc/misc.h: double linked lists generalized.
	* src/libcpukernel/cpukernel.c: using new double linked list macros.
	* src/libgpukernel: work-groups created. Lists of wavefronts.
	* src/libgpukernel/gpumachine.c: barriers implemented for synchronization among
		wavefronts in the same work-group.
	* src/libgpukernel: Work-groups include lists of running/finished wavefronts, or
		wavefronts waiting in barriers. OpenCL kernel structure includes a list
		of running/finished work-groups.

2010-05-18
	* src/libstruct/config.h: functions added to check format of configuration files.